--- a/src/App.css
+++ b/src/App.css
@@ -217,6 +217,224 @@ input, label{
   font-weight: 600;
 }
 
+* For specials cards */
+.specials {
+  display: grid;
+  height: 600px;
+  width: 100%;
+  justify-content: center;
+}
+
+.specials-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0em 5em 0em 5em;
+  width: 870px;
+  text-align: center;
+}
+
+.cards-section {
+  display: flex;
+  justify-content: center;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+.card-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.card {
+  margin: 16px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  height: 450px;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+  background-color: #EDEFEE;
+  width: 100%;
+}
+
+.card img {
+  width: 270px;
+  height: 160px;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+}
+
+@media (min-width: 600px) {
+  .card {
+    width: 270px;
+  }
+}
+
+.card h2 {
+  color: black;
+}
+
+.card h2, p {
+  text-align: left;
+  padding-left: 0.5em;
+}
+
+/* For testimonials */
+.testimonials {
+  background-color: #495e57;
+  width: 100%;
+  height: 800px;
+}
+
+.testimonials-header {
+  display: flex;
+  justify-content: center;
+}
+
+.testimonials-cards-section {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
+  margin: auto;
+  width: 1000px;
+}
+
+.testimonial-card {
+  display: flex;
+  flex-direction: column;
+  font-family: "Karla", sans-serif;
+  background-color: #EDEFEE;
+  margin: 5em 1.3em 2em 1.3em;
+  border: none;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  height: 250px;
+  max-width: 405px;
+}
+
+.testimonial-card-image {
+  display: block;
+  margin: -4em auto 0 auto;
+  width: 34%;
+  height: 55%;
+  border-radius: 50%;
+  box-shadow: 0px 2px rgba(0, 0, 0, 0.1);
+}
+
+.testimonial-name {
+  color: black;
+  text-align: center;
+
+}
+
+.testimonial-feedback {
+  margin: 1em 1em 0em 1em;
+  text-align: center;
+}
+
+@media (min-width: 600px) {
+  .testimonial-card {
+    width: 405px;
+  }
+}
+
+.star-rating {
+  color: #f39c12;
+  font-size: 28px;
+  margin-top: -20px;
+  margin-bottom: 8px;
+  text-align: center;
+}
+
+.star-filled {
+  color: #f39c12;
+  text-align: center;
+}
+
+.star-empty {
+  color: #ccc;
+  text-align: center;
+}
+
+/* About Little Lemon */
+.about {
+  display: flex;
+  width: 1000px;
+  height: 500px;
+  margin: auto;
+}
+
+.about-content {
+  width: 60%;
+  padding: 3em 7em 0em 2em;
+}
+
+.chefs {
+  display: flex;
+  flex-direction: column;
+  margin-top: 3em;
+  width: 40%;
+}
+
+.chefs img {
+  width: 350px;
+}
+
+#chefs-item-1 {
+  box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.2);
+}
+
+#chefs-item-2 {
+  margin: -1.5em auto auto -2em;
+  box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.2);
+  z-index: -1;
+}
+
+/* For reservation */
+.booking-wrapper, .booking-confirmation {
+  margin: auto;
+  width: 600px;
+}
+
+.booking-details {
+  display: grid;
+  grid-template-areas: "firstrow firstrow" 
+  "secondrow secondrow" 
+  "thirdrow thirdrow";
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.booking-date, .booking-time, .booking-guests, .booking-occasion, 
+.booking-request, .booking-submit, .booking-firstname, .booking-lastname, 
+.booking-contactnumber, .booking-email
+{
+  display: flex;
+  flex-direction: column;
+  padding: 0.5em;
+}
+
+.booking-request {
+  grid-area: thirdrow;
+}
+
+.personal-details {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+}
+
+.booking-submit {
+  margin-top: 1.5em;
+}
+
+/* footer-section */
+
 footer section{
   padding: 10px 13%;
   display: flex;
