--- a/src/App.css
+++ b/src/App.css
@@ -217,7 +217,7 @@ input, label{
   font-weight: 600;
 }
 
-* For specials cards */
+/* For specials cards  */
 .specials {
   display: grid;
   height: 600px;
@@ -254,7 +254,7 @@ input, label{
 .card {
   margin: 16px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  height: 450px;
+  height: 500px;
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
   background-color: #EDEFEE;
@@ -262,7 +262,7 @@ input, label{
 }
 
 .card img {
-  width: 270px;
+  width: 160px;
   height: 160px;
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
@@ -287,7 +287,7 @@ input, label{
 .testimonials {
   background-color: #495e57;
   width: 100%;
-  height: 800px;
+  height: 600px;
 }
 
 .testimonials-header {
@@ -297,8 +297,8 @@ input, label{
 
 .testimonials-cards-section {
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-columns: repeat(2, 1fr);
+  /* grid-template-rows: repeat(2, 1fr); */
+  grid-template-columns: repeat(4, 1fr);
   justify-content: center;
   margin: auto;
   width: 1000px;
@@ -313,14 +313,14 @@ input, label{
   border: none;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
-  height: 250px;
+  height: 350px;
   max-width: 405px;
 }
 
 .testimonial-card-image {
   display: block;
   margin: -4em auto 0 auto;
-  width: 34%;
+  width: 36%;
   height: 55%;
   border-radius: 50%;
   box-shadow: 0px 2px rgba(0, 0, 0, 0.1);
